Fix misaligned stock row

--- a/stockzen-frontend/src/components/Portfolio/PortfolioPage.module.css
+++ b/stockzen-frontend/src/components/Portfolio/PortfolioPage.module.css
@@ -112,6 +112,7 @@
 }
 
 .stockWrapper {
+  margin-right: -25px;
   padding-bottom: 7px;
   display: flex;
 }
